force-app/main/default/objects/Client__c/fields/CountofClientAddress__c.field-meta.xml
<CustomField>
    <fullName>CountofClientAddress__c</fullName>
    <label>CountofClientAddress</label>
    <summaryForeignKey>Client_Address__c.Client__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>