force-app/main/default/objects/Client__c/fields/MaxofCostofClientAddress__c.field-meta.xml
<CustomField>
    <fullName>MaxofCostofClientAddress__c</fullName>
    <label>MaxofCostofClientAddress</label>
    <summarizedField>Client_Address__c.CostofClientAddress__c</summarizedField>
    <summaryForeignKey>Client_Address__c.Client__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>