force-app/main/default/objects/Client__c/fields/MinCostofClientAddress2__c.field-meta.xml
<CustomField>
    <fullName>MinCostofClientAddress2__c</fullName>
    <label>MinCostofClientAddress2</label>
    <summarizedField>Client_Address__c.CostofClientAddress__c</summarizedField>
    <summaryForeignKey>Client_Address__c.Client__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>