force-app/main/default/objects/Client__c/fields/SumofCostofClientAddress__c.field-meta.xml
<CustomField>
    <fullName>SumofCostofClientAddress__c</fullName>
    <label>SumofCostofClientAddress</label>
    <summarizedField>Client_Address__c.CostofClientAddress__c</summarizedField>
    <summaryForeignKey>Client_Address__c.Client__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>