force-app/main/default/objects/Client__c/validationRules/FirstName_cannot_be_test.validationRule-meta.xml
<ValidationRule>
    <fullName>FirstName_cannot_be_test</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(  LOWER( First_Name__c ) , &apos;test&apos;)</errorConditionFormula>
    <errorDisplayField>First_Name__c</errorDisplayField>
    <errorMessage>FirstName Can&apos;t Be Test</errorMessage>
</ValidationRule>