force-app/main/default/objects/Client__c/validationRules/If_Gender_is_Others_then_DOB_needed.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Gender_is_Others_then_DOB_needed</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Gender__c , &apos;Others&apos;)  &amp;&amp;  ISBLANK(DOB__c)</errorConditionFormula>
    <errorDisplayField>DOB__c</errorDisplayField>
    <errorMessage>For Others Gender DOB is mandatory.</errorMessage>
</ValidationRule>